# PrimeLang

./: .gitignore  Makefile  Token.c  a.out  ast_node.h  codegen.c  codegen.h  constant_table.c  constant_table.h  ctest.txt  error.c  error.h  hash_table.h  lexer  lexer.c  lexer.h  main  main.c  memory.c  memory.h  parser  parser.c  parser.h  prime_file_parser.c  prime_file_parser.h  prog  progc  semantics.c  semantics.h  symbol.c  symbol.h  symbol_table.c  symbol_table.h  token.c  token.h  type.h  value.c  value.h  vector.c  vector.h  (+3 more)
haskell/: example.txt  fib.txt  haskell.cabal  test2.txt
haskell/app/: Main.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.8.1/: haskell-0.1.0.0-inplace.conf  package.cache
haskell/src/: Compiler.hs  Parser.hs  ScopeStack.hs  Stack.hs  Token.hs  Typechecker.hs  Types.hs
haskell/tests/: TestParser.hs  TestTypeChecker.hs  Utils.hs
include/: ast_node.h  codegen.h  constant_table.h  disassembler.h  error.h  hash_table.h  lexer.h  llist.h  memory.h  parser.h  prime_file_parser.h  scope.h  semantics.h  symbol.h  symbol_table.h  token.h  type.h  value.h  vector.h  vh_common.h  vm.h
src/: Makefile  ast_node.c  codegen.c  constant_table.c  error.c  hash_table.c  lexer.c  llist.c  main  main.c  memory.c  parser.c  prime_file_parser.c  scope.c  scopes.c  semantics.c  symbol.c  symbol_table.c  token.c  type.c  value.c  vector.c  vm.c
tests/: test_ct.c  test_tc.c
