cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fadi
maintainer:         fadiaffani5@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library 

    other-modules: Typechecker, Parser, ScopeStack, Stack, Token, Types, Compiler 

    build-depends:    base ^>=4.19.0.0, containers, mtl, binary, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Compiler, Typechecker, Parser, Types, ScopeStack, Stack, Token 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0, containers, mtl, binary, bytestring
    hs-source-dirs:   app, src
    default-language: Haskell2010

Test-Suite test_type_checker

    type: exitcode-stdio-1.0
    main-is: TestTypeChecker.hs
    other-modules: Typechecker, Parser, ScopeStack, Stack, Token, Types, Utils
    hs-source-dirs:
        tests,
        src
    build-depends:
        base, HUnit, containers, mtl, binary, bytestring, transformers 
    default-language: Haskell2010

Test-Suite test_parser
    type: exitcode-stdio-1.0
    main-is: TestParser.hs
    other-modules: Typechecker, Parser, ScopeStack Stack, Token, Types, Utils
    hs-source-dirs:
        tests,
        src
    build-depends:
        base, HUnit, containers, mtl, transformers
    default-language: Haskell2010
